# zmq-arena

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  RANKING.md  README.md  matrix.example.json  matrix.linode.json  rust-toolchain.toml
docs/: explore.html  index.html  tables.html
docs/history/: index.json
docs/sample/: 2026-05-04-run.json  2026-05-11-run.json  2026-05-18-run.json  2026-05-25-run.json  2026-06-01-run.json  2026-06-08-run.json  index.json
orchestrator/: Cargo.toml
orchestrator/src/: cgroups.rs  config.rs  main.rs  stats.rs  telemetry.rs
scripts/: build-targets.sh  gen_matrix.py  gen_sample_history.py  render_results.py  setup-ubuntu.sh
targets/: README.md
targets/celerity_target/: Cargo.toml  build.rs  rust-toolchain.toml
targets/celerity_target/src/: main.rs
targets/libzmq_cpp_target/: CMakeLists.txt
targets/libzmq_cpp_target/src/: main.cpp
targets/monocoque_target/: Cargo.toml  build.rs  rust-toolchain.toml
targets/monocoque_target/src/: main.rs
targets/omq_compio_target/: Cargo.toml  build.rs  rust-toolchain.toml
targets/omq_compio_target/src/: main.rs
targets/omq_tokio_target/: Cargo.toml  build.rs  rust-toolchain.toml
targets/omq_tokio_target/src/: main.rs
targets/rust_zmq_target/: Cargo.toml  build.rs  rust-toolchain.toml
targets/rust_zmq_target/src/: main.rs
targets/rzmq_target/: Cargo.toml  build.rs  rust-toolchain.toml
targets/rzmq_target/src/: main.rs
targets/zeromq_rs_target/: Cargo.toml  build.rs  rust-toolchain.toml
targets/zeromq_rs_target/src/: main.rs
workflows/: weekly-arena.yml
