# Standalone project. NOT a member of the orchestrator workspace.
# Build: `cd targets/celerity_target && cargo build --release`.
#
# Engine: celerity (ShemShadrack/celerity), pure-Rust ZMTP 3.1 sans-IO core
# (CelerityPeer) with a Tokio transport layer for TCP and Unix-domain IPC.
[workspace]

[package]
name = "celerity-target"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "zmq-arena target wrapper: celerity (sans-IO ZMTP 3.1 + Tokio)."

[[bin]]
name = "celerity-target"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
# Verified on crates.io: celerity 0.2.0 (MIT).
celerity = { version = "0.2.0", features = ["tokio", "ipc", "curve"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
