# Standalone project. NOT a member of the orchestrator workspace.
# Build: `cd targets/monocoque_target && cargo build --release` (Linux 6.0+ for io_uring).
#
# Engine: monocoque (monocoque-rs), a Rust-native ZMTP 3.1 runtime on io_uring
# via compio. The ZeroMQ socket API lives behind the `zmq` feature.
[workspace]

[package]
name = "monocoque-target"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "zmq-arena target wrapper: monocoque (monocoque-rs, ZMTP on io_uring/compio)."

[[bin]]
name = "monocoque-target"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
# Verified on crates.io: monocoque-rs 0.1.5 (lib name `monocoque`), MIT.
monocoque-rs = { version = "0.1.5", features = ["zmq"] }
# monocoque runs on the compio io_uring runtime.
compio = { version = "0.13", features = ["runtime", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
